Fixed misalignment Added some input styling on quantity input

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -111,12 +111,18 @@
             object-fit: fill;
         }
         p {
-            width: 25%;
+            width: 22%;
             font-weight: normal;
         }
         input {
           width: 25%;
           height: 2rem;
+          text-align: center;
+          border-radius: 0.5rem;
+          padding: 0.1rem;
+        }
+        span {
+            width: 10%;
         }
     }
     .cart-total {
